Refactor contact.html with updated links and styles

--- a/contact.html
+++ b/contact.html
@@ -202,7 +202,7 @@
                     <img src="linkedin image-fotor-bg-remover-2025102020326.png" alt="LinkedIn">
                     <div class="contact-info">
                         <h3>Linkedin</h3>
-                        <a href="https://www.linkedin.com/in/seuusuario" target="_blank">@seuusuario</a>
+                        <a href="https://www.linkedin.com/in/kaio-b-82157a309/" target="_blank">@KaioBezerra</a>
                     </div>
                 </div>
 
@@ -210,7 +210,7 @@
                     <img src="whats image-fotor-bg-remover-2025102020246.png" alt="WhatsApp">
                     <div class="contact-info">
                         <h3>WhatsApp</h3>
-                        <a href="https://wa.me/5581999999999" target="_blank">+55 (81) 9 9999-9999</a>
+                        <a href="https://wa.me/5581997327938" target="_blank">+55 (81) 9 9732-7938</a>
                     </div>
                 </div>
 
@@ -218,7 +218,7 @@
                     <img src="insta image-fotor-bg-remover-202510202009.png" alt="Instagram">
                     <div class="contact-info">
                         <h3>Instagram</h3>
-                        <a href="https://www.instagram.com/seuusuario" target="_blank">@seuusuario</a>
+                        <a href="https://www.instagram.com/kaioaraujo_dev/" target="_blank">@kaioaraujo_dev</a>
                     </div>
                 </div>
 
@@ -226,7 +226,7 @@
                     <img src="gmail image-fotor-bg-remover-202510202022.png" alt="Gmail">
                     <div class="contact-info">
                         <h3>Gmail</h3>
-                        <a href="mailto:seuemail@gmail.com">seuemail@gmail.com</a>
+                        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=silvabaraujo2007@gmail.com" target="_blank">silvabaraujo2007@gmail.com</a>
                     </div>
                 </div>
             </div>
